--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">© Copyright 2018 Viktor UJCM</p>
+<p class="text-center text-muted">© Copyright 2018 Mariateguino BOT</p>
