--- a/views/register-form.ejs
+++ b/views/register-form.ejs
@@ -17,20 +17,61 @@
 
         <div class="frm" class="card-panel lime yellow lighten-1">
             <div>
-                <h5 class="card-panel lime yellow lighten-1">Suscripción Viktor UJCM</h5>
+                <h5 class="card-panel light-green accent-1">Suscripción Mariateguino BOT</h5>
             </div>
 
 
 
             <form action="/webviews/save" method="GET" name="myForm">
                 <input type="hidden" name="psid" id="psid">
-                <div class="form-group">
-                    <div class="col s12">
-                        <h6>¿Actualmente eres estudiante de la UJCM Filial Tacna?</h6>
-                    </div>
-                    <div class="col s6"><label><input type="radio" class="studentujcm"  id="studentujcm_1" name="studentujcm" value="1" checked><span>Sí</span></label></div>
-                    <div class="col s6"><label><input type="radio" class="studentujcm" id="studentujcm_0" name="studentujcm" value="0"><span>No</span></label></div>
+                <div class="col-s12">
+                    <h6>¿A qué carrera profesional perteneces?</h6>
                 </div>
+                <select class="form-control form-control-lg" name="Escuela" id="Escuela">
+                    <option class ="carrera" name="carrera" disabled selected>Escuela Profesional / Posgrado</option>
+                    <option class ="carrera" name="carrera" disabled>Pregrado</option>
+                    <option class ="carrera" name="carrera" id="carrera_1" value="1">Derecho</option>
+                    <option class ="carrera" name="carrera" id="carrera_2" value="2">Contabilidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_3" value="3">Ingeniería Comercial</option>
+                    <option class ="carrera" name="carrera" id="carrera_4" value="4">Ciencias Administrativas y Marketing Estratégico</option>
+                    <option class ="carrera" name="carrera" id="carrera_5" value="5">Educación Inicial</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="6">Educación Física</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="13">Economía</option>
+                    <option class ="carrera" name="carrera" id="carrera_7" value="7">Psicología</option>
+                    <option class ="carrera" name="carrera" id="carrera_8" value="8">Ingeniería de Sistemas e Informática</option>
+                    <option class ="carrera" name="carrera" id="carrera_9" value="9">Programa de Complementación Académica</option>
+                    <option class ="carrera" name="carrera" disabled>Posgrado</option>
+                    <option class ="carrera" name="carrera" id="carrera_10" value="10">Maestría</option>
+                    <option class ="carrera" name="carrera" id="carrera_11" value="11">Doctorado</option>
+                    <option class ="carrera" name="carrera" id="carrera_12" value="12">Segunda Especialidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_2" value="2">Contabilidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_3" value="3">Ingeniería Comercial</option>
+                    <option class ="carrera" name="carrera" id="carrera_4" value="4">Ciencias Administrativas y Marketing Estratégico</option>
+                    <option class ="carrera" name="carrera" id="carrera_5" value="5">Educación Inicial</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="6">Educación Física</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="13">Economía</option>
+                    <option class ="carrera" name="carrera" id="carrera_7" value="7">Psicología</option>
+                    <option class ="carrera" name="carrera" id="carrera_8" value="8">Ingeniería de Sistemas e Informática</option>
+                    <option class ="carrera" name="carrera" id="carrera_9" value="9">Programa de Complementación Académica</option>
+                    <option class ="carrera" name="carrera" disabled>Posgrado</option>
+                    <option class ="carrera" name="carrera" id="carrera_10" value="10">Maestría</option>
+                    <option class ="carrera" name="carrera" id="carrera_11" value="11">Doctorado</option>
+                    <option class ="carrera" name="carrera" id="carrera_12" value="12">Segunda Especialidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_2" value="2">Contabilidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_3" value="3">Ingeniería Comercial</option>
+                    <option class ="carrera" name="carrera" id="carrera_4" value="4">Ciencias Administrativas y Marketing Estratégico</option>
+                    <option class ="carrera" name="carrera" id="carrera_5" value="5">Educación Inicial</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="6">Educación Física</option>
+                    <option class ="carrera" name="carrera" id="carrera_6" value="13">Economía</option>
+                    <option class ="carrera" name="carrera" id="carrera_7" value="7">Psicología</option>
+                    <option class ="carrera" name="carrera" id="carrera_8" value="8">Ingeniería de Sistemas e Informática</option>
+                    <option class ="carrera" name="carrera" id="carrera_9" value="9">Programa de Complementación Académica</option>
+                    <option class ="carrera" name="carrera" disabled>Posgrado</option>
+                    <option class ="carrera" name="carrera" id="carrera_10" value="10">Maestría</option>
+                    <option class ="carrera" name="carrera" id="carrera_11" value="11">Doctorado</option>
+                    <option class ="carrera" name="carrera" id="carrera_12" value="12">Segunda Especialidad</option>
+                    <option class ="carrera" name="carrera" id="carrera_12" value="12">Ninguna de las anteriores</option>
+                  </select>
 
 
                 <div class="form-group">
